# rustapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/rustapi-engine/: Cargo.toml
crates/rustapi-engine/src/: handler.rs  lib.rs  request.rs  response.rs  router.rs  server.rs
crates/rustapi-py/: Cargo.toml
crates/rustapi-py/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: demo.py
examples/nexus/backend/: requirements.txt
examples/nexus/backend/app/: auth.py  database.py  main.py  models.py  schemas.py
examples/nexus/backend/tests/: load_test.py  test_integration.py
examples/nexus/frontend/: vite.config.js
examples/nexus/frontend/src/: App.jsx  index.css
examples/nexus/frontend/src/components/: AuthModal.jsx  Feed.jsx
python/rustapi/: __init__.py  py.typed
tests/: test_e2e.py  test_perf.py  test_perf_async.py
