[package]
name = "rustapi-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust-core HTTP engine for rustapi: hyper + tokio + matchit router"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server", "server-auto", "http1", "http2", "tokio"] }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
matchit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
